*SVN*

* render(:text), render(:partial), and render(:nothing) always default to :layout => false. This also fixes send_file, which was applying a layout if one existed for the current action.

* verify with :redirect_to won't redirect if a redirect or render has already been performed #1350

* render(:partial => true) is identical to the behavior of the deprecated render_partial()

* Fixed render(:partial => "...") to use an empty Hash for the local assigns #1365

* Fixed Caching::Fragments::FileStore.delete to not raise an exception if the delete fails.

* Deprecated all render_* methods in favor of consolidating all rendering behavior in Base#render(options). This enables more natural use of combining options, such as layouts. Examples:

    +---------------------------------------------------------------+-------------------------------------------------------+
    | BEFORE                                                        | AFTER                                                 |
    +---------------------------------------------------------------+-------------------------------------------------------+
    | render_with_layout "weblog/show", "200 OK", "layouts/dialog"  | render :action => "show", :layout => "dialog"         |
    | render_without_layout "weblog/show"                           | render :action => "show", :layout => false            |
    | render_action "error", "404 Not Found"                        | render :action => "error", :status => "404 Not Found" |
    | render_template "xml.div('stuff')", "200 OK", :rxml           | render :inline => "xml.div('stuff')", :type => :rxml  |
    | render_text "hello world!"                                    | render :text => "hello world!"                        |
    | render_partial_collection "person", @people, nil, :a => 1     | render :partial => "person", :collection => @people,  |