@@ -20,13 +20,17 @@ module ActionController #:nodoc:
         render_without_benchmark(options, deprecated_status)
       else
         db_runtime = ActiveRecord::Base.connection.reset_runtime if Object.const_defined?("ActiveRecord") && ActiveRecord::Base.connected?
-        @rendering_runtime = Benchmark::measure{ render_without_benchmark(options, deprecated_status) }.real
+
+        render_output = nil
+        @rendering_runtime = Benchmark::measure{ render_output = render_without_benchmark(options, deprecated_status) }.real
 
         if Object.const_defined?("ActiveRecord") && ActiveRecord::Base.connected?
           @db_rt_before_render = db_runtime
           @db_rt_after_render = ActiveRecord::Base.connection.reset_runtime
           @rendering_runtime -= @db_rt_after_render
         end
+
+        render_output
       end
     end    
 
