@@ -1,5 +1,7 @@
 *SVN*
 
+* Make sure the benchmarking render method always returns the output of the render.
+
 * render(:text), render(:partial), and render(:nothing) always default to :layout => false. This also fixes send_file, which was applying a layout if one existed for the current action.
 
 * verify with :redirect_to won't redirect if a redirect or render has already been performed #1350
